--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>I`m hamzz</title>
+  <title>I`m Arii</title>
   <meta name="description" content="Hello World">
   <meta property="og:title" content="Hmzz" />
   <meta property="og:description" content="Hello World">
   <meta property="og:image" content="https://telegra.ph/file/336f35108e298e8431a6a.jpg">
-  <link rel="shortcut icon" href="https://telegra.ph/file/0b7860f27eb530860f199.jpg" type="image/x-icon" />
+  <link rel="shortcut icon" href="https://telegra.ph/file/336f35108e298e8431a6a.jpg" type="image/x-icon" />
     <!-- Fontawesome v4.7.0 -->    
       <!-- Fontawesome v4.7.0 -->    
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">  
@@ -983,12 +983,12 @@ font-size:20
     </div>    
     <div class="pf-footer-coverpage">
       <div class="pf-cnt-info-user">
-        <h3 class="pf-info-title">Hamzz</h3>
-        <p class="pf-info-position">developer HamzzBot</p>
+        <h3 class="pf-info-title">Arii</h3>
+        <p class="pf-info-position">developer RriiBot</p>
       </div>      
       <div class="pf-profile-user">
         <div class="pf-cnt-img-avatar">
-          <img src="https://telegra.ph/file/afb391135870c1407bf3a.jpg" alt=":)">         
+          <img src="https://telegra.ph/file/6cdadf968a130cdb25da4.jpg" alt=":)">         
         </div>
       </div>
       <div class="pf-navbar-menu-tab">
@@ -1022,8 +1022,8 @@ font-size:20
  <span style="text-align: center;"class="pf-lbl-title"></span>
  <span style="text-align: center;"class="pf-lbl-title"></span>
  <span style="text-align: center;"class="pf-lbl-title"></span>
-              <span style="text-align: center;"class="pf-lbl-title">My name is Hamzz</span>
-              <span style="text-align: center;"class="pf-lbl-title">I'm from Central Java / Indonesia</span>
+              <span style="text-align: center;"class="pf-lbl-title">My name is Arii</span>
+              <span style="text-align: center;"class="pf-lbl-title">I'm from South Sulawesi / Indonesia</span>
               <span style="text-align: center;"class="pf-lbl-title"> I am a Bot Developer</span>
             </div>                    
           </div>
@@ -1056,7 +1056,7 @@ font-size:20
 
 
 
-<a href="https://github.com/hamzzcleys">My github<i class="fa fa-github"style="vertical-align: middle;color:#00ffff"></i></a>
+<a href="https://github.com/AriBhizer">My github<i class="fa fa-github"style="vertical-align: middle;color:#00ffff"></i></a>
           </div>        
 <div class="pf-row">        
           <div class="pf-w-50">          
