--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>I`m Arii</title>
   <meta name="description" content="Hello World">
-  <meta property="og:title" content="Hmzz" />
+  <meta property="og:title" content="Arii" />
   <meta property="og:description" content="Hello World">
   <meta property="og:image" content="https://telegra.ph/file/336f35108e298e8431a6a.jpg">
   <link rel="shortcut icon" href="https://telegra.ph/file/336f35108e298e8431a6a.jpg" type="image/x-icon" />
