--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>I`m Arii</title>
+  <title>Arii</title>
   <meta name="description" content="Hello World">
   <meta property="og:title" content="Arii" />
   <meta property="og:description" content="Hello World">
@@ -1056,7 +1056,7 @@ font-size:20
 
 
 
-<a href="https://github.com/AriBhizer">My github<i class="fa fa-github"style="vertical-align: middle;color:#00ffff"></i></a>
+<a href="https://github.com/AriBhizer">My github<i class="fa fa-whatsapp"style="vertical-align: middle;color:#00ffff"></i></a>
           </div>        
 <div class="pf-row">        
           <div class="pf-w-50">          
