--- a/index.html
+++ b/index.html
@@ -1056,7 +1056,7 @@ font-size:20
 
 
 
-<a href="https://github.com/AriBhizer">My github<i class="fa fa-whatsapp"style="vertical-align: middle;color:#00ffff"></i></a>
+<a href="https://wa.me/6285796430430">WhatsApp<i class="fa fa-whatsapp"style="vertical-align: middle;color:#00ffff"></i></a>
           </div>        
 <div class="pf-row">        
           <div class="pf-w-50">          
