--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@ font-size:20
     <div class="pf-footer-coverpage">
       <div class="pf-cnt-info-user">
         <h3 class="pf-info-title">Arii</h3>
-        <p class="pf-info-position">developer RriiBot</p>
+        <p class="pf-info-position">Muhammad Yusuf Siraj</p>
       </div>      
       <div class="pf-profile-user">
         <div class="pf-cnt-img-avatar">
